--- a/HCR/Documents/muppet_manual.Rmd
+++ b/HCR/Documents/muppet_manual.Rmd
@@ -8,7 +8,7 @@ output:
   html_document:
     number_sections: yes
     toc_depth: 4
-date: "`r lubridate::today()`"
+date: "`r lubridate::now()`"
 subtitle: Program description and instructions for users
 ---
 
@@ -546,20 +546,9 @@ The stock is projected through the assessment years by^[NOTE: Need to check if $
 \widetilde{N}_{y+1}=f\left(\widetilde{N}_{a,y},\widetilde{cW}_{a,y+1},sel_{y},TAC_{y}\right)\label{eq:asserr3}
 \end{equation}
 
-Where $\widetilde{cW}$ is the predicted weight and the $TAC_{y}$^[NOTE: Say something on $TAC_{y/y-1}$] the catch in the assessment year, having been estimated in the Decision model one year earlier. The equation is solved numerically by Newtons method. 
-
-Target exploitation rate is often a function of the observed spawning stock calculated by^[NOTE: What if SSB not in the beginning of the year?]:
-
-The stock is projected through the assessment years by^[need to specify what $cW_y$ is used, think it is $\widetilde{cW}_{a,y+1}$]:
-
-\begin{equation}
-\widetilde{N}_{y+1}=f\left(\widetilde{N}_{a,y},cW_{y},sel_{y},TAC_{y}\right)\label{eq:asserr3}
-\end{equation}
-
-Where the catch $TAC_{y}$^[NOTE: Say something on $TAC_{y/y-1}$] was derived from the estimated stock one year earlier. This equation is solved numerically by Newtons method.
+Where $\widetilde{cW}_{a,y}$ are predicted weights at age and the $TAC_{y}$^[NOTE: Say something on $TAC_{y/y-1}$] the catch in the assessment year, having been estimated in the Decision model one year earlier. The equation is solved numerically by Newtons method. 
 
 Predicted spawning stock in the beginning^[NOTE: What if SSB not in the beginning of the year?] of the advisory year is then calculated as:
-
 
 \begin{equation}
 \widetilde{SSB}_{y+1}=\sum_{a}\widetilde{N}_{a,y+1}\widetilde{ssbW}_{a,y+1}\widetilde{p}_{a,y+1}\label{eq:calcssbtmp}
@@ -597,7 +586,7 @@ The rules:
 
 ### HCR based on biomass
 
-The form of the harvest rules that used in the various simulation were (Taken from Saithe, needs revamping once above is clarified):
+The form of the harvest rules that used in the various simulation were (Below taken from Saithe, needs revamping once above is clarified):
 
 Rule 0:
 \begin{equation}
