--- a/docs/muppet_manual.Rmd
+++ b/docs/muppet_manual.Rmd
@@ -5,6 +5,10 @@ output:
     keep_md: yes
     number_sections: yes
     toc_depth: 4
+    highlight: haddock
+    theme: united
+    toc: yes
+    toc_float: yes
   pdf_document:
     number_sections: yes
     toc: yes
